<resources>
    <string name="app_name">Find-renewal</string>
    <string name="mapBtn">MAP</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="edittext_pw">password here</string>
    <string name="edittext_id">id here</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome">Welcome to Find world</string>
    <string name="re_enter">Re-enter</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-mail</string>
    <string name="ex_email">find@naver.com</string>
    <string name="ex_phone">000-0000-0000</string>
    <string name="cancel">cancel</string>
</resources>
