<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.find.find_renewal.LoginActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:text="@string/welcome"
        android:textSize="16pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/id"
        android:textSize="12pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editID"
        android:hint="@string/edittext_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/password"
        android:textSize="12pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editPW"
        android:inputType="textPassword"
        android:hint="@string/edittext_pw"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/loginBtn"
        android:text="@string/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/joinBtn"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
